Fixed z-index for introduction description

--- a/css/custom/style.css
+++ b/css/custom/style.css
@@ -254,6 +254,10 @@
     margin-top: 5%;
 }
 
+.z-index-1
+{
+    z-index: 1;
+}
 .chevron {
   position: absolute;
   width: 28px;
